--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.3 
	- Fixed an issue that caused AJAX not to work if you were working
		in a sub-directory. 

--------------------------------------------------------------------------
  v.3.3.3-Beta3 01/04/2007 
	- Fixed a few more unhandled mis-configurations of Localplay which
		could cause PHP errors
	- Fixed an issue with the Quick Jump box on Browse by Songs
		(Thx Jru)
	- Tweaked Headers passed for AJAX in an attempt to 'help' IE. 
  	- Last Database update before Stable
  	- Fixed a view issue introduced when sorting of the albums under
		single artist view was added 
  	- Removed unused options from config file
  	- Fixed some remaining album art issues and a undefined array()
		issue if you only have one user and try to view 
		recommendations
	- Fixed some get_info() references in song.class.php that caused
		XBMC to not work. 
	- Added Die,Das,Ein,Eine as prefix's for album names (Thx Vogi)
	- Added reading of riff tags 
	- Improved Sidebar CSS making it more compliant with different
		browsers (Thx Spocky)
	- Fixed some logic errors in the Transcoding logic and play logic
	- Rewrote Album Art collection to correct some seriou logic flaws
	- Added potential fix for FastCGI installations
	- Updated Snoopy to 1.2.3 (from manually patched 1.2.1) 
	- Fixed sorting of Themes, now sorted by Alpha of theme name
	- Fixed long standing Now Playing display issue in Classic Theme
	- Fixed Now Playing to account for Windows Media Player 11s 
		3 HTTP Requests per song stupidity
	- Added ability to mass tag using play selected functionality
	- Fixed Preferences page, preferences now ordered semi-logically
	- Fixed MPD controller so it displays track numbers correctly