@@ -523,6 +523,14 @@ margin-right:5em;
         border-bottom: 1px solid #ffffcc;
 }
 
+#tv_left {
+        float: left;
+        clear: left;
+}
+#tv_np {
+        float: right;
+}
+
 /* styles for the star ratings */
 .star-rating{
         list-style:none;
