@@ -4,6 +4,12 @@
 
 --------------------------------------------------------------------------
   v.3.3.3 
+  	- Fixed play lock with Democratic Play if song no longer exists
+  	- Fixed a display issue of the Now Playing on the Democratic
+		play page
+  	- Fixed display of Last IP if track_user_ip was disabled
+  	- Fixed Update to redirect to test.php if no db connection found
+		(Thx SpComb)
 	- Fixed an issue that caused AJAX not to work if you were working
 		in a sub-directory. 
 
